<resources>
    <string name="app_name" translatable="false">MDG-SOC-EduPlexus</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="title_activity_navigation">Edu-Plexus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_import">Import</string>
    <string name="planner">Import</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="title_activity_planner">Planner</string>
    <string name="Chemistry">Chemistry</string>
    <string name="Physics">Physics</string>
    <string name="Maths">Maths</string>
    <string name="Integration">Integration</string>
    <string name="Probability">Probability</string>
    <string name="Geometry">3D Geometry</string>
    <string name="Trigonometry">Trigonometry</string>
    <string name="Conic">Conic Section</string>
    <string name="DifferentialCalculus">Differential Calculus</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_no">Repition Interval</string>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string-array name="Subjects">
        <item>Maths</item>
        <item>Chemistry</item>
        <item>Physics</item>
    </string-array>

    <string name="add_reminder">Reminder</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
</resources>
