<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mathematics">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewIntegration"
        android:layout_width="411dp"
        android:layout_height="146dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#00302F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="135dp"
            android:layout_height="122dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mathicon" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almendra_sc"
            android:text="@string/Integration"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProbability"
        android:layout_width="411dp"
        android:layout_height="146dp"
        android:layout_marginTop="190dp"
        app:cardBackgroundColor="#00302F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="135dp"
            android:layout_height="122dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mathicon" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almendra_sc"
            android:text="@string/Probability"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3dGeometry"
        android:layout_width="411dp"
        android:layout_height="146dp"
        android:layout_marginTop="370dp"
        app:cardBackgroundColor="#00302F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="135dp"
            android:layout_height="122dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mathicon" />

        <TextView
            android:id="@+id/textView101"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almendra_sc"
            android:text="@string/Geometry"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTrigonometry"
        android:layout_width="411dp"
        android:layout_height="146dp"
        android:layout_marginTop="550dp"
        app:cardBackgroundColor="#00302F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/imageView45"
            android:layout_width="135dp"
            android:layout_height="122dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mathicon" />

        <TextView
            android:id="@+id/textView143"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almendra_sc"
            android:text="@string/Trigonometry"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConicSection"
        android:layout_width="411dp"
        android:layout_height="146dp"
        android:layout_marginTop="730dp"
        app:cardBackgroundColor="#00302F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/imageView466"
            android:layout_width="135dp"
            android:layout_height="122dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mathicon" />

        <TextView
            android:id="@+id/textView1429"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/almendra_sc"
            android:text="@string/Conic"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>